[package]
name = "mocksysql"
version = "0.1.0"
edition = "2021"

[features]
tls = ["dep:rustls", "dep:rcgen"]

[dependencies]
rustls = { version = "0.23.23", optional = true }
rcgen = { version = "0.13.2", optional = true }
sqlparser = { version = "0.56.0", features = ["serde"] }
serde_json = { version = "1.0.140" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true