[package]
name = "mocksysql"
version = "0.1.0"
edition = "2021"

[features]
tls = ["dep:rustls", "dep:rcgen"]

[dependencies]
rustls = { version = "0.23.23", optional = true }
rcgen = { version = "0.13.2", optional = true }
sqlparser = { version = "0.56.0", features = ["serde"] }
dashmap = "6.1.0"
ttl_cache = "0.5.1"
uuid = { version = "1.17.0", features = ["v4"] }
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.20.3"
base64 = "0.22.1"
kafka = "0.10.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true